--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,25 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&display=swap");
 @tailwind base;
-body{
-    background: rgb(24, 24, 27);
-    color: white
+body {
+  background: rgb(24, 24, 27);
+  color: white;
 }
 @tailwind components;
 @tailwind utilities;
 
-.ck.ck-editor__main .ck-content {
-    height: 15rem;
+.ql-editor {
+  min-height: 15rem;
+  max-height: 20rem;
+  background: rgb(39, 39, 42);
+  color: white;
+  font-size: 1rem;
+  overflow-y: scroll !important;
+}
+.ql-container.ql-snow,
+.ql-toolbar.ql-snow {
+  border: 1px solid rgb(82, 82, 91) !important;
 }
 /* ===== Scrollbar CSS ===== */
 * {
-    scrollbar-width: auto;
-    scrollbar-color: rgb(236, 13, 236) black;
-  }
-  *::-webkit-scrollbar-track {
-    background: transparent;
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    background-color: rgb(236, 13, 236);
-    border-radius: 10px;
-  }
+  scrollbar-width: auto;
+  scrollbar-color: rgb(236, 13, 236) black;
+}
+*::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(236, 13, 236);
+  border-radius: 10px;
+}
