--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,17 +19,19 @@ body {
 .ql-toolbar.ql-snow {
   border: 1px solid rgb(82, 82, 91) !important;
 }
-/* ===== Scrollbar CSS ===== */
 * {
   scrollbar-width: auto;
-  scrollbar-color: rgb(236, 13, 236) black;
 }
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
 *::-webkit-scrollbar-track {
-  background: transparent;
-  border-radius: 10px;
+  background: black;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: rgb(236, 13, 236);
-  border-radius: 10px;
+  background-color: #cc17f0;
+  border-radius: 20px;
 }
