--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,6 +77,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  pre {
+    @apply overflow-x-scroll bg-zinc-900 scroll-mx-3
+  }
 }
 
 .ql-editor {
@@ -100,7 +103,7 @@
   border-top-right-radius: 5px;
 }
 * {
-  scrollbar-width: auto;
+  scrollbar-width: 8px;
 }
 
 *::-webkit-scrollbar {
