fix code block component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,8 +77,9 @@
   body {
     @apply bg-background text-foreground;
   }
-  pre {
-    @apply overflow-x-scroll bg-zinc-900 scroll-mx-3
+  .prose code::after,
+  .prose code::before {
+    @apply content-none;
   }
 }
 
